test_cases/fail/semantics/struct_rep_field.c0
int main() {
    return 0;
}

struct han_liu_jia_bei {
    int hello;
    string test;
    string hello;
};
